syntax = "proto3";

// config for threescale
package adapter.threescale.config;

import "gogoproto/gogo.proto";

option go_package="config";

// config for threescale
message Params {

    string service_id = 1;

    string system_url = 2;

    string access_token = 3;

    string cache_valid_seconds = 4;

    string cache_valid_hits = 5;

}
